fix(editor): Improve contrast for `--color-danger` in dark mode (no-changelog)

--- a/packages/design-system/src/css/_tokens.dark.scss
+++ b/packages/design-system/src/css/_tokens.dark.scss
@@ -2,6 +2,7 @@
 
 @mixin theme {
 	// Primary tokens
+	--color-danger: var(--prim-color-alt-c-tint-250);
 
 	// Text
 	--color-text-dark: var(--prim-gray-40);
